Mindre justeringar och rättningar.

--- a/body.tex
+++ b/body.tex
@@ -289,7 +289,7 @@ Mottagarbandbredden (RBW) anges i kHz och brusgolvet i dBm (dB relaterat en styr
 \subsection{Return loss och VSWR}
 
 Return loss och VSWR anger samma sak. VSWR är vanligare inom amatörradio medan man i profesionella sammanhang föredrar att prata om return loss. RL är storleken på den reflekterade signalen i förhållande till den framåtgående signalen. Return loss mäts alltså i dB enligt formeln $10\log(P_F/P_R)$ där $P_F$ är den framåtgående effekten (forward) och  $P_R$ är den reflekterade signalen i retur.
-\clearpage
+
 \begin{longtable}{rrr|rrr|rrr}
 	\textbf{RL} & \textbf{VSWR} & \textbf{\%} & \textbf{RL} & \textbf{VSWR} & \textbf{\%} & \textbf{RL} & \textbf{VSWR} & \textbf{\%} \\ \hline 	\endhead
 	          1 &         17,39 &       79,43 &           8 &          2,32 &       15,85 &          20 &          1,22 &        1,00 \\
@@ -382,7 +382,7 @@ På PMR446 och andra band samt för ett antal repeatrar på 70cm primärt men ä
 	36 & 233,6 & 37 & 241,8 & 38 & 250,3 &    &       &    &
 \end{tabular}
 
-\subsection{CTCSS Zoner i Sverige}
+\subsection{CTCSS-zoner i Sverige}
 
 Rekommendationer för repeatrar i olika distrikt och län att använda CTCSS för att hindra att störningar uppkommer vid conds mm. Det ger också möjligheten för sändaramatörer att öppna just den repeater man önskar om man har flera på samma frekvens omkring sig.
 
@@ -400,7 +400,6 @@ Rekommendationer för repeatrar i olika distrikt och län att använda CTCSS fö
 	Distrikt 7      &      79.7       &      156.7      &      210.7      &
 \end{longtable}
 
-\clearpage
 \section{Kanalnumrering för amatörradioband}
 
 Denna typ av kanalnumrering är överenskommen inom IARU region 1 för 6m, 2m och 70cm banden på amatörradiofrekvenser. Kanalnumreringen består av ett prefix som anger vilket band och här används F--6m, V--2m, U--70cm. Därefter används 2 siffror på 6m och 2m banden och tre siffror på 70cm bandet för att ange kanal. Repeaterfrekvenser anges med tillägget R före kanalnumret och innebär då normalt duplex med det skift som normalt används för bandet. Vid repeatrar är det repeaterns utfrekvens som anges, dvs den som mobilstationen lyssnar på. Exempel: RV48.
