Ett gäng småfixar, bl.a. kanallistorna.

--- a/body.tex
+++ b/body.tex
@@ -4,15 +4,13 @@ VHF/UHF}
 \author{SM0UEI}
 \maketitle
 
-\begin{abstract}
-Handbok för radiooperatörer innehåller diverse matnyttig information för amatörradiooperatörer i Sverige. Tanken är att samla information som t.ex. är bra att ha på resande fot eller annars som man saknar när man behöver den och inte har tillgång till Internet.
+Handbok för radiooperatörer innehåller diverse matnyttig information för ama\-tör\-radio\-oper\-atör\-er i Sverige. Tanken är att samla information som t.ex. är bra att ha på resande fot eller annars som man saknar när man behöver den och inte har tillgång till Internet.
 
 Skriv ut den på A4 med två sidor på samma papper och vik ihop till ett häfte. Ladda ner den i läsplattan eller surfplattan. Papperstypen är vald som A5 för att underlätta läsning på platta och mobiltelefon till och med.
 
 Idéer tankar, korrigeringar och annat som behöver vara med är väl\-kom\-met att du skickar till anders@sikvall.se så kan jag se till att få med det i nästa utgåva. Denna bok uppdateras sporadiskt när det finns skäl och tid till detta.
 
-Till en början är det VHF och UHF men kommer så småningom utökas med fler och fler band.
-\end{abstract}
+Om detta blir uppskattat kommer det säkert bli en bok för HF och kanske för mikrovåg också.
 
 \clearpage
 \tableofcontents
@@ -402,7 +400,9 @@ Rekommendationer för repeatrar i olika distrikt och län att använda CTCSS fö
 
 \section{Kanalnumrering för amatörradioband}
 
-Denna typ av kanalnumrering är överenskommen inom IARU region 1 för 6m, 2m och 70cm banden på amatörradiofrekvenser. Kanalnumreringen består av ett prefix som anger vilket band och här används F--6m, V--2m, U--70cm. Därefter används 2 siffror på 6m och 2m banden och tre siffror på 70cm bandet för att ange kanal. Repeaterfrekvenser anges med tillägget R före kanalnumret och innebär då normalt duplex med det skift som normalt används för bandet. Vid repeatrar är det repeaterns utfrekvens som anges, dvs den som mobilstationen lyssnar på. Exempel: RV48.
+Denna typ av kanalnumrering är överenskommen inom IARU region 1 för 6m, 2m och 70cm banden på amatörradiofrekvenser. Kanalnumreringen består av ett prefix som anger vilket band och här används F--6m, V--2m, U--70cm. Därefter används 2 siffror på 6m och 2m banden och tre siffror på 70cm bandet för att ange kanal. 
+
+Repeaterfrekvenser anges med tillägget R före kanalnumret och innebär då normalt duplex med det skift som normalt används för bandet. Vid repeatrar är det repeaterns utfrekvens som anges, dvs den som mobilstationen lyssnar på. Exempel: RV48.
 
 \begin{tabular}{crrll}
 	\textbf{Band} & \textbf{Startfrekvens} & \textbf{Kanalraster} & \textbf{Första kanal} & \textbf{Beräknas}    \\ \hline
@@ -413,7 +413,14 @@ Denna typ av kanalnumrering är överenskommen inom IARU region 1 för 6m, 2m oc
 
 Eftersom amatörradiobanden ser lite olika ut i olika länder förekommer det kanaler i numreringen som inte är tillåtna på vissa ställen. Det är därför viktig att kontrollera att man fortfarande följer bandplanerna i den region man är.
 
-I 6 m bandet finns inga FM-kanaler definierade under 51 MHz. För 2m-bandet är FM-kanaler endast definierade från 145 MHz och uppåt. I 70 cm-bandet är inga kanaler definierade i intervallet 432.000--433.000 MHz.
+\begin{itemize}
+\item I 6 m bandet finns inga FM-kanaler definierade under 51 MHz. 
+\item För 2m-bandet är FM-kanaler endast definierade från 145 MHz och uppåt. 
+\item I 70 cm-bandet är inga kanaler definierade i intervallet 432.000--433.000 MHz.
+\end{itemize}
+v
+Information om kanalnumreringen för 23cm-bandet tas tacksamt mot.
+
 \clearpage
 \subsection{FM-kanaler 6m-bandet}
 
@@ -1028,7 +1035,8 @@ Repeater&	FM/C4FM&	SK1BL/R	&Endre	&145.7750	&-600kHz	&1750	&QRV	&JO97FO\\
 \end{longtable}
 \normalsize
 %%%%%%%%%% Bandplaner här roterade 90 för enklast läsning %%%%%%%%%%
-	\section{Bandplan 6m 50--52 MHz}
+\section{Bandplaner}
+	\subsection{Bandplan 6m 50--52 MHz}
 	\begin{tabular}{rrrll}
 		\textbf{Frekvens} &        & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar}                                  \\ \hline
 		           50.000 & 50.100 &      500 Hz & CW              & \textbf{CW anrp. 50.050 och 50.090 (interkont.)}              \\ \hline
@@ -1045,7 +1053,7 @@ Repeater&	FM/C4FM&	SK1BL/R	&Endre	&145.7750	&-600kHz	&1750	&QRV	&JO97FO\\
 		                  &        &             &                 & RF81 – RF99                                          \\ \hline
 \end{tabular}
 \clearpage
-\section{Bandplan 2m 144--146 MHz}
+\subsection{Bandplan 2m 144--146 MHz}
 \begin{tabular}{rrrll}
 	\textbf{Frekvens} &           & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar}                     \\ \hline
 	         144.0000 &  144.1100 &      500 Hz & CW, EME         & \textbf{CW anrop 144.050}               \\
@@ -1074,7 +1082,7 @@ Repeater&	FM/C4FM&	SK1BL/R	&Endre	&145.7750	&-600kHz	&1750	&QRV	&JO97FO\\
 	          145.806 &   146.000 &      12 kHz & All mode        & Exklusivt satellit                      \\ \hline
 \end{tabular}
 \clearpage
-\section{Bandplan 70cm 432--438 MHz}
+\subsection{Bandplan 70cm 432--438 MHz}
 \begin{tabular}{rrrll}
 	\textbf{Frekvens} &               & \textbf{BW} & \textbf{Trafik} & \textbf{Anmärkning}                               \\ \hline
 	         432.0000 &      432.0250 &      500 Hz & CW              & EME exklusivt.                                    \\ \hline
@@ -1099,7 +1107,7 @@ Repeater&	FM/C4FM&	SK1BL/R	&Endre	&145.7750	&-600kHz	&1750	&QRV	&JO97FO\\
 	          435.000 &       438.000 &      20 kHz & All mode        & Exklusivt satellit
 \end{tabular}
 %\clearpage
-\section{Bandplan 23cm 1240--1300 MHz}
+\subsection{Bandplan 23cm 1240--1300 MHz}
 \begin{tabular}{rrrll}
 	\textbf{Frekvens} &          & \textbf{BW} & \textbf{Trafik} & \textbf{Anmärkning}                           \\ \hline
 	         1240.000 & 1243.250 &      20 kHz & Alla moder      & 1240.000 - 1241.000 Digital kommunikation     \\ \hline
@@ -1132,7 +1140,7 @@ Repeater&	FM/C4FM&	SK1BL/R	&Endre	&145.7750	&-600kHz	&1750	&QRV	&JO97FO\\
 
 \begin{landscape}
 \small
-\section{PTS Bandplan för VHF}
+\subsection{PTS Bandplan för VHF}
 \begin{longtable}{llll}
 	\textbf{Frekvens}                      & \textbf{Duplex}    & \textbf{Användning}                   & \textbf{Anmärkning}            \\ \hline
 	\endhead
@@ -1268,7 +1276,7 @@ Repeater&	FM/C4FM&	SK1BL/R	&Endre	&145.7750	&-600kHz	&1750	&QRV	&JO97FO\\
 \end{landscape}
 
 \begin{landscape}
-\section{PTS bandplan för UHF}
+\subsection{PTS bandplan för UHF}
 \begin{longtable}{llll}
 	\textbf{Frekvens}  & \textbf{Duplex}    & \textbf{Användning}     & \textbf{Anmärkning}                      \\ \hline
 	\endhead
