--- a/body.tex
+++ b/body.tex
@@ -494,53 +494,53 @@ Information om kanalnumreringen för 23cm-bandet tas tacksamt mot.
 
 \begin{longtable}{rrl|rrl}
 	Frekvens & Kanal & Anm.    & Frekvens & Kanal & Anm  \\ \hline
-	433,4000 &  U272 & SSTV    & 433,7125 &  U297 &  \\
-	433,4125 &  U273 &         & 433,7250 &  U298 &  \\
-	433,4250 &  U274 &         & 433,7375 &  U299 &  \\
-	433,4375 &  U275 &         & 433,7500 &  U300 &  \\
-	433,4500 &  U276 & Digital & 433,7625 &  U301 &  \\
-	433,4625 &  U277 &         & 433,7750 &  U302 &  \\
-	433,4750 &  U278 &         & 433,7875 &  U303 &  \\
+	433,4000 &  U272 & SSTV    & 433,7125 &  U297 &      \\
+	433,4125 &  U273 &         & 433,7250 &  U298 &      \\
+	433,4250 &  U274 &         & 433,7375 &  U299 &      \\
+	433,4375 &  U275 &         & 433,7500 &  U300 &      \\
+	433,4500 &  U276 & Digital & 433,7625 &  U301 &      \\
+	433,4625 &  U277 &         & 433,7750 &  U302 &      \\
+	433,4750 &  U278 &         & 433,7875 &  U303 &      \\
 	433,4875 &  U279 &         & 433,8000 &  U304 & APRS \\
-	433,5000 &  U280 & Anrop   & 433,8125 &  U305 &  \\
-	433,5125 &  U281 &         & 433,8250 &  U306 &  \\
-	433,5250 &  U282 &         & 433,8375 &  U307 &  \\
-	433,5375 &  U283 &         & 433,8500 &  U308 &  \\
-	433,5500 &  U284 &         & 433,8625 &  U309 &  \\
-	433,5625 &  U285 &         & 433,8750 &  U310 &  \\
-	433,5750 &  U286 &         & 433,8875 &  U311 &  \\
-	433,5875 &  U287 &         & 433,9000 &  U312 &  \\
-	433,6000 &  U288 & RTTY    & 433,9125 &  U313 &  \\
-	433,6125 &  U289 &         & 433,9250 &  U314 &  \\
-	433,6250 &  U290 &         & 433,9375 &  U315 &  \\
-	433,6375 &  U291 &         & 433,9500 &  U316 &  \\
-	433,6500 &  U292 &         & 433,9625 &  U317 &  \\
-	433,6625 &  U293 &         & 433,9750 &  U318 &  \\
-	433,6750 &  U294 &         & 433,9875 &  U319 &  \\
-	433,6875 &  U295 &         & 434,0000 &  U320 &  \\
-	433,7000 &  U296 & FAX     &          &       &
+	433,5000 &  U280 & Anrop   & 433,8125 &  U305 &      \\
+	433,5125 &  U281 &         & 433,8250 &  U306 &      \\
+	433,5250 &  U282 &         & 433,8375 &  U307 &      \\
+	433,5375 &  U283 &         & 433,8500 &  U308 &      \\
+	433,5500 &  U284 &         & 433,8625 &  U309 &      \\
+	433,5625 &  U285 &         & 433,8750 &  U310 &      \\
+	433,5750 &  U286 &         & 433,8875 &  U311 &      \\
+	433,5875 &  U287 &         & 433,9000 &  U312 &      \\
+	433,6000 &  U288 & RTTY    & 433,9125 &  U313 &      \\
+	433,6125 &  U289 &         & 433,9250 &  U314 &      \\
+	433,6250 &  U290 &         & 433,9375 &  U315 &      \\
+	433,6375 &  U291 &         & 433,9500 &  U316 &      \\
+	433,6500 &  U292 &         & 433,9625 &  U317 &      \\
+	433,6625 &  U293 &         & 433,9750 &  U318 &      \\
+	433,6750 &  U294 &         & 433,9875 &  U319 &      \\
+	433,6875 &  U295 &         & 434,0000 &  U320 &      \\
+	433,7000 &  U296 & FAX     &          &       &      \\
 \end{longtable}
 
 \clearpage
 \begin{longtable}{rrl|rrl}
 	Frekvens & Kanal & Anm. & Frekvens & Kanal & Anm. \\ \hline
 	434,6000 & RU368 & RU0  & 434,8000 & RU384 & RU8  \\
-	434,6125 & RU369 &      & 434,8125 & RU385 &  \\
+	434,6125 & RU369 &      & 434,8125 & RU385 &      \\
 	434,6250 & RU370 & RU1  & 434,8250 & RU386 & RU9  \\
-	434,6375 & RU371 &      & 434,8375 & RU387 &  \\
+	434,6375 & RU371 &      & 434,8375 & RU387 &      \\
 	434,6500 & RU372 & RU2  & 434,8500 & RU388 & RU10 \\
-	434,6625 & RU373 &      & 434,8625 & RU389 &  \\
+	434,6625 & RU373 &      & 434,8625 & RU389 &      \\
 	434,6750 & RU374 & RU3  & 434,8750 & RU390 & RU11 \\
-	434,6875 & RU375 &      & 434,8875 & RU391 &  \\
+	434,6875 & RU375 &      & 434,8875 & RU391 &      \\
 	434,7000 & RU376 & RU4  & 434,9000 & RU392 & RU12 \\
-	434,7125 & RU377 &      & 434,9125 & RU393 &  \\
+	434,7125 & RU377 &      & 434,9125 & RU393 &      \\
 	434,7250 & RU378 & RU5  & 434,9250 & RU394 & RU13 \\
-	434,7375 & RU379 &      & 434,9375 & RU395 &  \\
+	434,7375 & RU379 &      & 434,9375 & RU395 &      \\
 	434,7500 & RU380 & RU6  & 434,9500 & RU396 & RU14 \\
-	434,7625 & RU381 &      & 434,9625 & RU397 &  \\
+	434,7625 & RU381 &      & 434,9625 & RU397 &      \\
 	434,7750 & RU382 & RU7  & 434,9750 & RU398 & RU15 \\
-	434,7875 & RU383 &      & 434,9875 & RU399 &  \\
-	         &       &      & 435,0000 & RU400 & RU16
+	434,7875 & RU383 &      & 434,9875 & RU399 &      \\
+	         &       &      & 435,0000 & RU400 & RU16 \\
 \end{longtable}
 
 \begin{landscape}
